@@ -22551,6 +22551,36 @@ name|rollEditLog
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|FSNamesystem
+operator|.
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Swallowing exception in "
+operator|+
+name|NameNodeEditLogRoller
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|":"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
 name|Thread
 operator|.
 name|sleep
@@ -22582,33 +22612,6 @@ literal|" was interrupted, exiting"
 argument_list|)
 expr_stmt|;
 break|break;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|FSNamesystem
-operator|.
-name|LOG
-operator|.
-name|error
-argument_list|(
-literal|"Swallowing exception in "
-operator|+
-name|NameNodeEditLogRoller
-operator|.
-name|class
-operator|.
-name|getSimpleName
-argument_list|()
-operator|+
-literal|":"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 block|}
